<resources>
    <string name="app_name">Jetpack Cinema</string>
    <string name="jetpack_cinema">Jetpack Cinema</string>
    <string name="favorite">Favorite</string>
    <string name="content_description">Content Description</string>
    <string name="strip_text">-</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="tv_show_fav">Fav Tv Show</string>
    <string name="movie_fav">Fav Movie</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
    <string name="image_cover">Image Cover</string>
    <string name="image_backdrop">Image Backdrop</string>
</resources>