...
            app:contentScrim="@color/purple_700"
            app:expandedTitleMarginBottom="20dp"
            app:expandedTitleMarginStart="15dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_backdrop_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/image_backdrop"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
...

    <include
        android:id="@+id/detail_content"
        layout="@layout/content_detail" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/favorite"
        app:backgroundTint="@color/white"
        app:layout_anchor="@id/app_bar_layout_detail"
...
